--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "cooger-style": "^1.0.2"
   },
   "dependencies": {
+    "flags": "^0.1.3",
     "glob": "^5.0.15",
     "html-minifier": "^0.8.0"
   }
