--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "bin": "bin/main.js",
   "scripts": {
     "build": "babel --compact --no-comments -d bin src",
-    "prebuild": "cooger-style src/*.js"
+    "prebuild": "standard src/*.js"
   },
   "keywords": [
     "angular",
@@ -22,7 +22,7 @@
   },
   "devDependencies": {
     "babel": "^5.8.23",
-    "cooger-style": "^1.0.2"
+    "standard": "^7.1.2"
   },
   "dependencies": {
     "flags": "^0.1.3",
