--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "chai": "^3.5.0",
     "jsdom": "^9.8.0",
     "mocha": "^3.1.2",
+    "shelljs": "^0.7.5",
     "standard": "^7.1.2"
   },
   "dependencies": {
