--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "type": "git",
     "url": "tewson/ng-templates-bundle"
   },
+  "engines": {
+    "node": ">=4"
+  },
   "devDependencies": {
     "angular": "^1.5.8",
     "babel": "^5.8.23",
